--- a/css/style.css
+++ b/css/style.css
@@ -81,16 +81,17 @@ ul {
   grid-template-areas:
     "sidebar header"
     "sidebar main";
-  background-color: lightgray;
 }
 
 header {
   grid-area: header;
   display: grid;
   grid-template: 1fr 1fr/ 1.5fr 1fr;
-  column-gap: 0.5em;
+  gap: 0.5em;
   align-items: center;
   background-color: #fff;
+  padding: 20px 30px;
+  box-shadow: 0px 2px 4px 2px #cfdbe3;
 }
 
 .search-container {
@@ -152,16 +153,47 @@ p.user-name {
   border-radius: 0.5em;
 }
 
-
-
-
-
 nav {
   grid-area: sidebar;
-  border: 2px solid #000;
+  padding: 1.3rem;
+  display: grid;
+  grid-template-rows: auto auto auto;
+  align-content: start;
+  row-gap: 2em;
+  background-color: var(--background-blue);
+
+  color: #fff;
+
+  >* {
+    border: 2px solid yellow;
+  }
+}
+
+/*make icons white*/
+nav img {
+  filter: invert(1);
+}
+
+nav>.dashboard {
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 1rem;
+  align-items: center;
+  justify-content: start;
+}
+
+nav ul {
+  display: grid;
+  row-gap: 1em;
+}
+
+nav li {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: start;
+  column-gap: 1rem;
 }
 
 main {
   grid-area: main;
-  border: 2px solid green;
 }
