--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ header {
   align-items: center;
   background-color: #fff;
   padding: 20px 30px;
-  box-shadow: 0px 2px 4px 2px #cfdbe3;
+  box-shadow: 0px 14px green;
 }
 
 .search-container {
@@ -196,13 +196,18 @@ nav li {
 
 main {
   grid-area: main;
-  background-color: #cfdbe3;
+  background-color: #e2e8f0;
   padding: 50px 20px;
   display: grid;
   grid-template: 1fr 1fr/ 2fr 1fr;
   grid-template-areas:
     "projects announcements"
-    "prpjects trending";
+    "projects trending";
+  column-gap: 1.5em;
+
+  >* {
+    border: 2px solid cyan;
+  }
 }
 
 .project-container {
@@ -211,10 +216,17 @@ main {
 
 .announcement-container {
   grid-area: announcements;
+  font-size: 80%;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  align-content: start;
 }
 
 .trending-container {
   grid-area: trending;
+  display: grid;
+  /*grid-template-rows: auto 1fr;*/
+  align-content: end;
 }
 
 .projects {
@@ -253,4 +265,60 @@ article {
 
 h2 {
   margin-bottom: 20px;
+  font-size: 1.8rem;
+}
+
+.announcement-container>ul,
+.trending-container>ul {
+  background-color: #fff;
+  border-radius: 1em;
+  padding: 20px;
+}
+
+
+.announcements>li {
+  padding: 10px 4px;
+}
+
+.trending>li {
+  display: grid;
+  grid-template-areas:
+    "pfp user-tag"
+    "pfp about";
+  row-gap: 0.2em;
+  column-gap: 1em;
+  align-items: center;
+}
+
+.trending h2 {
+  margin: 0;
+}
+
+.trending {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  row-gap: 1em;
+
+  >* {
+    border: 2px solid red;
+  }
+}
+
+.trending .user-tag {
+  align-self: end;
+}
+
+.trending img {
+  grid-area: pfp;
+}
+
+.trending,
+.announcements,
+.projects>li {
+  box-shadow: 2px 2px 4px 2px #cfdbe3;
+}
+
+.pfp,
+.trending img {
+  border-radius: 50%;
 }
