--- a/css/style.css
+++ b/css/style.css
@@ -87,11 +87,16 @@ header {
   grid-area: header;
   display: grid;
   grid-template: 1fr 1fr/ 1.5fr 1fr;
-  gap: 0.5em;
+  row-gap: 0.5rem;
+  column-gap: 1rem;
   align-items: center;
   background-color: #fff;
-  padding: 20px 30px;
+  padding: 1.3rem 30px;
   box-shadow: 0px 14px green;
+}
+
+label {
+  display: grid;
 }
 
 .search-container {
@@ -159,14 +164,9 @@ nav {
   display: grid;
   grid-template-rows: auto auto auto;
   align-content: start;
-  row-gap: 2em;
+  row-gap: 3rem;
   background-color: var(--background-blue);
-
   color: #fff;
-
-  >* {
-    border: 2px solid yellow;
-  }
 }
 
 /*make icons white*/
@@ -178,19 +178,21 @@ nav>.dashboard {
   display: grid;
   grid-template-columns: auto auto;
   column-gap: 1rem;
-  align-items: center;
+  align-content: center;
   justify-content: start;
 }
 
 nav ul {
   display: grid;
   row-gap: 1em;
+  font-size: 1.7rem;
 }
 
 nav li {
   display: grid;
   grid-template-columns: auto auto;
   justify-content: start;
+  align-items: center;
   column-gap: 1rem;
 }
 
@@ -204,14 +206,12 @@ main {
     "projects announcements"
     "projects trending";
   column-gap: 1.5em;
-
-  >* {
-    border: 2px solid cyan;
-  }
 }
 
 .project-container {
   grid-area: projects;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
 .announcement-container {
@@ -233,6 +233,7 @@ main {
   display: grid;
   grid-template: 1fr 1fr 1fr / 1fr 1fr;
   gap: 20px;
+  align-items: stretch;
 }
 
 .projects>li {
@@ -268,6 +269,11 @@ h2 {
   font-size: 1.8rem;
 }
 
+h2,
+h3 {
+  text-transform: capitalize;
+}
+
 .announcement-container>ul,
 .trending-container>ul {
   background-color: #fff;
@@ -282,12 +288,14 @@ h2 {
 
 .trending>li {
   display: grid;
+  grid-template-columns: auto 1fr;
   grid-template-areas:
     "pfp user-tag"
     "pfp about";
-  row-gap: 0.2em;
-  column-gap: 1em;
+  row-gap: 0.2rem;
+  column-gap: 1rem;
   align-items: center;
+  align-content: center;
 }
 
 .trending h2 {
@@ -297,15 +305,16 @@ h2 {
 .trending {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr;
-  row-gap: 1em;
-
-  >* {
-    border: 2px solid red;
-  }
+  row-gap: 1rem;
 }
 
 .trending .user-tag {
   align-self: end;
+  font-weight: bold;
+}
+
+.trending .about {
+  color: #888;
 }
 
 .trending img {
@@ -321,4 +330,23 @@ h2 {
 .pfp,
 .trending img {
   border-radius: 50%;
+}
+
+button:hover,
+li:not(header li):hover,
+.pfp:hover,
+.notification:hover,
+#search:hover {
+  position: relative;
+  top: -3px;
+  box-shadow: 0px 2px 4px 5px #cfdbe3;
+}
+
+button:active {
+  color: var(--background-blue);
+  background-color: #fff;
+}
+
+li {
+  border-radius: 1rem;
 }
