Make announcemeng list responsive

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ ul {
 
 .container {
   display: grid;
+  height: 100vh;
   grid-template: auto 4fr/ 1fr 4fr;
   grid-template-areas:
     "sidebar header"
@@ -214,21 +215,6 @@ main {
   grid-template-rows: auto 1fr;
 }
 
-.announcement-container {
-  grid-area: announcements;
-  font-size: 80%;
-  display: grid;
-  grid-template-rows: auto 1fr;
-  align-content: start;
-}
-
-.trending-container {
-  grid-area: trending;
-  display: grid;
-  /*grid-template-rows: auto 1fr;*/
-  align-content: end;
-}
-
 .projects {
   display: grid;
   grid-template: 1fr 1fr 1fr / 1fr 1fr;
@@ -272,6 +258,27 @@ h2 {
 h2,
 h3 {
   text-transform: capitalize;
+}
+
+
+.announcement-container {
+  grid-area: announcements;
+  font-size: 80%;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  align-content: stretch;
+}
+
+.announcements {
+  display: grid;
+  grid-template-rows: 1fr 0fr 1fr 0fr 1fr;
+}
+
+.trending-container {
+  grid-area: trending;
+  display: grid;
+  /*grid-template-rows: auto 1fr;*/
+  align-content: end;
 }
 
 .announcement-container>ul,
