--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ label {
     background-color: #cfdbe3;
     border: none;
     border-radius: 0.5em;
+    padding: 0.3rem 0.7rem;
   }
 }
 
@@ -342,11 +343,22 @@ h3 {
 button:hover,
 li:not(header li):hover,
 .pfp:hover,
-.notification:hover,
-#search:hover {
+.notification:hover {
   position: relative;
   top: -3px;
   box-shadow: 0px 2px 4px 5px #cfdbe3;
+}
+
+#search:hover {
+  position: relative;
+  top: -3px;
+  border: 1px solid black;
+}
+
+#search:focus {
+  outline: none;
+  border: 2px solid var(--background-blue);
+  box-shadow: none;
 }
 
 button:active {
